--- a/FilRouge/Symfony/VillageGreen/templates/panier/index.html.twig
+++ b/FilRouge/Symfony/VillageGreen/templates/panier/index.html.twig
@@ -6,7 +6,12 @@
 
 <div class="row" id="ariane">
     <ul class="crumb">
-        <li><a href="javascript:history.go(-1)">Retour</a></li>
+        <li style="border-radius: 50px 0 0 50px; padding-left: 15px;">
+            <a href="{{ path('categorie') }}">Accueil</a>
+        </li>
+        <li style="border-radius: 0 50px 50px 0; padding-right: 15px;">
+            <a href="javascript:history.go(-1)">Retour</a>
+        </li>
     </ul>
 </div>
 
@@ -16,11 +21,11 @@
     <table class="table">
         <thead>
             <tr id="nom-panier">
-                <th>Photo</th>
-                <th>Produit</th>
-                <th>Prix</th>
-                <th>Quantité</th>
-                <th>Total</th>
+                <th>PHOTO</th>
+                <th>PRODUIT</th>
+                <th>PRIX</th>
+                <th>QUANTITÉ</th>
+                <th>TTC</th>
                 <th></th>
             </tr>
         </thead>
@@ -57,7 +62,19 @@
 
             {% else %}
             <tr>
-                <td colspan="5" class="text-center" id="vide">Votre panier est vide</td>
+                <td colspan="6" class="text-center" id="vide">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-emoji-frown-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm-2.715 5.933a.5.5 0 0 1-.183-.683A4.498 4.498 0 0 1 8 9.5a4.5 4.5 0 0 1 3.898 2.25.5.5 0 0 1-.866.5A3.498 3.498 0 0 0 8 10.5a3.498 3.498 0 0 0-3.032 1.75.5.5 0 0 1-.683.183zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z" />
+                    </svg>
+                    Il n'y a rien là-dedans
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-emoji-frown-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm-2.715 5.933a.5.5 0 0 1-.183-.683A4.498 4.498 0 0 1 8 9.5a4.5 4.5 0 0 1 3.898 2.25.5.5 0 0 1-.866.5A3.498 3.498 0 0 0 8 10.5a3.498 3.498 0 0 0-3.032 1.75.5.5 0 0 1-.683.183zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z" />
+                    </svg>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
@@ -65,7 +82,7 @@
         <tfoot>
             <tr>
                 <td colspan="3"></td>
-                <td>Total : {{ total }} &euro;</td>
+                <td id="total">Total : {{ total }} &euro;</td>
             </tr>
         </tfoot>
     </table>
