--- a/FilRouge/Symfony/VillageGreen/templates/produit/index.html.twig
+++ b/FilRouge/Symfony/VillageGreen/templates/produit/index.html.twig
@@ -7,32 +7,37 @@
 <div class="row" id="ariane">
     <ul class="crumb">
         <li style="border-radius: 50px 0 0 50px; padding-left: 15px;">
-            <a href="/">Accueil</a>
+            <a href="{{ path('categorie') }}">Accueil</a>
         </li>
         <li style="border-radius: 0 50px 50px 0; padding-right: 15px;">
             <a href="{{ path('souscategorie', {id : (produits|first).sousCategorie.categorie.id}) }}">
-            {{ (produits|first).sousCategorie.categorie.nom }}</a>
+                {{ (produits|first).sousCategorie.categorie.nom }}</a>
         </li>
-     </ul>
+    </ul>
 </div>
 
 <h1 id="titre">{{ (produits|first).sousCategorie.nom }}</h1>
 <div class="row">
-    
+
     {% for row in produits %}
 
-        <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4" id="haut"><a class="nav-link" href="{{ path('details', {id : row.id}) }}">
-            <img class="img-fluid" src="/assets/images/produits/{{ row.photo }}" alt="{{ row.nom }}" id="image-produit"></a>
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto">
-            <p class="nom">{{ row.nom }}</p>
-        </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4" id="haut">
+        <a href="{{ path('details', {id : row.id}) }}">
+            <img class="img-fluid" src="/assets/images/produits/{{ row.photo }}" alt="{{ row.nom }}" id="image-produit">
+        </a>
+    </div>
+    <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto">
+        <p class="nom">{{ row.nom }}</p>
+    </div>
 
-        <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2">
-            <p class="prix-produit">{{ row.prixachat }} &euro;</p>
-        </div>
-            <hr>
-    {% endfor %}   
-</div>    
+    <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2">
+        <p class="prix-produit">{{ row.prixachat }} &euro;</p>
+        <button type="button" class="btn btn-info btn-sm" id="bouton">
+            <a class="valider" href="{{ path('details', {id : row.id}) }}">Détail du produit</a>
+        </button>
+    </div>
+    <hr>
+    {% endfor %}
+</div>
 
 {% endblock %}
