--- a/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
@@ -88,6 +88,15 @@
                     </div>
                 </nav>
             </div>
+
+            {% if app.user %}
+            <div style="text-align:right;" id="id">
+                Vous êtes connecté avec cet identifiant : {{ app.user.username }}
+                <button type="button" class="btn btn-dark btn-sm">
+                    <a href="{{ path('app_logout') }}">Déconnexion</a>
+                </button>
+            </div>
+            {% endif %}
         </div>
 
         {% block body %}{% endblock %}
