--- a/FilRouge/SYMFONY/VillageGreen/templates/registration/register.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/registration/register.html.twig
@@ -13,11 +13,7 @@
     </ul>
 </div>
 
-<div class="row">
-    <div class="col-12" id="titre">
-        <h2>Inscrivez-vous</h2>
-    </div>
-</div>
+<h1 id="titre"> Inscrivez-vous </h1>
 
 <div class="row connexion">
     <div class="col-12">
