--- a/FilRouge/SYMFONY/VillageGreen/templates/security/login.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/security/login.html.twig
@@ -17,7 +17,7 @@
 
     {% if app.user %}
     <div class="mb-3" id="connecte">
-        Vous êtes connecté avec ses identifiants : <h4> {{ app.user.username }} </h4>
+        Vous êtes connecté avec cet identifiant : <h4> {{ app.user.username }} </h4>
         <button type="button" class="btn btn-secondary btn-sm">
             <a href="{{ path('app_logout') }}">Déconnexion</a>
         </button>
@@ -25,11 +25,7 @@
     {% endif %}
 
 
-    <div class="row">
-        <div class="col-12" id="titre">
-            <h2>Connexion</h2>
-        </div>
-    </div>
+    <h1 id="titre"> Connectez-vous </h1>
 
     <div class="row connexion">
         <div class="col-12">
