--- a/FilRouge/SYMFONY/VillageGreen/public/assets/CSS/style.css
+++ b/FilRouge/SYMFONY/VillageGreen/public/assets/CSS/style.css
@@ -113,14 +113,15 @@ a {
 .nom {
     font-size:30px;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 83px;
+    margin-bottom: 30px;
 }
 
 .prix-produit {
     font-size:40px;
     text-align: center;
     margin-top: 82px;
-    color: rgb(2, 91, 2);
+    color: rgb(34, 115, 140);
     font-weight: bold;
 }
 
@@ -137,7 +138,7 @@ a {
 
 .prix-detail {
     font-size: 60px;
-    color:rgb(2, 91, 2);
+    color: rgb(34, 115, 140);
     font-weight: bold;
     text-align: right;
 }
@@ -169,6 +170,7 @@ a {
 #total {
     color:rgb(174, 70, 70);
     font-weight: bolder;
+    font-size: 30px;
 }
 
 
@@ -191,4 +193,17 @@ a {
 
 #connecte {
     color : red;
+}
+
+/* Pour suite du panier */
+
+#titre1 {
+    text-align: center;
+    color: rgb(160, 56, 56);
+    border: 2px solid black;
+    margin-top: 20px;
+}
+
+#id {
+    margin-top: 10px;
 }
