--- a/FilRouge/SYMFONY/VillageGreen/templates/produit/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/produit/index.html.twig
@@ -28,13 +28,26 @@
     </div>
     <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 mx-auto">
         <p class="nom">{{ row.nom }}</p>
+
+        <button type="button" class="btn btn-dark" id="bouton">
+            <a class="valider" href="{{ path('details', {id : row.id}) }}">détails du produit</a>
+        </button>
+
     </div>
 
     <div class="col-12 col-sm-12 col-md-12 col-lg-2 col-xl-2">
         <p class="prix-produit">{{ row.prixachat }} &euro;</p>
-        <button type="button" class="btn btn-info btn-sm" id="bouton">
-            <a class="valider" href="{{ path('details', {id : row.id}) }}">Détail du produit</a>
+
+        <button type="button" class="btn btn-success" id="bouton">
+            <a class="valider" href="{{ path('add', {id: row.id}) }}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart2"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+                </svg>
+            </a>
         </button>
+
     </div>
     <hr>
     {% endfor %}
