--- a/FilRouge/SYMFONY/VillageGreen/templates/catalogue/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/catalogue/index.html.twig
@@ -20,7 +20,7 @@
         <p class="nom">{{ row.nom }}</p>
 
         <button type="button" class="btn btn-dark" id="bouton">
-            <a class="valider" href="{{ path('details', {id : row.id}) }}">détails du produit</a>
+            <a class="valider" href="{{ path('details', {id : row.id}) }}">détails</a>
         </button>
 
     </div>
