--- a/FilRouge/SYMFONY/VillageGreen/templates/detail/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/detail/index.html.twig
@@ -35,7 +35,7 @@
             <hr>
             <p class="prix-detail"> {{ descriptif.prixachat }} &euro;</p>
 
-            <button type="button" class="btn btn-dark" id="bouton">
+            <button type="button" class="btn btn-secondary" id="bouton">
                 <a class="valider" href="{{ path('add', {id: descriptif.id}) }}">Ajouter au panier</a>
             </button>
 
