--- a/FilRouge/SYMFONY/VillageGreen/templates/registration/register.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/registration/register.html.twig
@@ -34,7 +34,8 @@
 
 <div class="row">
     <div class="col-12 bouton-connexion">
-        <button type="submit" class="btn btn-dark">Créer mon compte</button>
+        <button type="submit" class="btn btn-dark"
+            onclick="return confirm('Un email de confirmation va de vous être envoyer.')">Créer mon compte</button>
     </div>
 </div>
 
