--- a/FilRouge/SYMFONY/VillageGreen/templates/registration/confirmation_email.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/registration/confirmation_email.html.twig
@@ -1,11 +1,11 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Merci de confirmer votre email</h1>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
-    <a href="{{ signedUrl }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+    Merci de confirmer votre adresse mail en cliquant sur ce lien : <br><br>
+    <a href="{{ signedUrl }}">Confirmer mon email</a>.
+    Ce lien s'expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
-    Cheers!
+    Bon shopping !
 </p>
