--- a/FilRouge/SYMFONY/VillageGreen/templates/profil/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/profil/index.html.twig
@@ -104,7 +104,7 @@
     <div class="row">
         <div class="col-12 bouton-connexion">
             <button type="submit" class="btn btn-dark">
-                Valider mes informations et passer ma commande
+                Valider mes informations
             </button>
         </div>
     </div>
