--- a/FilRouge/SYMFONY/VillageGreen/public/assets/CSS/style.css
+++ b/FilRouge/SYMFONY/VillageGreen/public/assets/CSS/style.css
@@ -247,3 +247,13 @@ a {
     text-align: right;
     margin-top: 70px;
 }
+
+/* Pour la partie admin */
+
+#titre-admin {
+    text-align: center;
+    color: rgb(160, 56, 56);
+    border: 2px solid black;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
