--- a/FilRouge/SYMFONY/VillageGreen/templates/security/login.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/security/login.html.twig
@@ -15,6 +15,11 @@
     <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
+    {% for flash_error in app.flashes('verify_email_success') %}
+    <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+    {% endfor %}
+
+
     <h1 id="titre"> Connectez-vous </h1>
 
     <div class="row">
