--- a/FilRouge/SYMFONY/VillageGreen/templates/profil/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/profil/index.html.twig
@@ -69,7 +69,7 @@
                 <input required type="text" value="" class="form-control" id="ville" name="ville">
             </div>
             <br>
-            <label for="type">Vous êtes :</label> <br>
+            <label for="sexe">Vous êtes :</label> <br>
             <div class="form-check form-check-inline">
                 <input class="form-check-input" type="radio" name="type" id="type" value="par">
                 <label class="form-check-label" for="radio1">Un particulier</label>
