--- a/FilRouge/SYMFONY/VillageGreen/public/assets/CSS/style.css
+++ b/FilRouge/SYMFONY/VillageGreen/public/assets/CSS/style.css
@@ -8,11 +8,23 @@ body {
 }
 
 #logo {
+    display: none;
     width: 60%;
     margin-top: -15px;
     margin-left: -41px;
     margin-bottom: -14px;
 }
+
+@media (min-width: 576px) { 
+    #logo {
+        display: inline;
+        width: 60%;
+        margin-top: -15px;
+        margin-left: -41px;
+        margin-bottom: -14px;
+    }
+
+ }
 
 #banniere {
     width: 100%;
@@ -174,27 +186,6 @@ a {
 }
 
 
-/* Pour la page connexion */
-.haut-connexion {
-    margin-top: 20px;
-    text-align: center;
-}
-
-.connexion {
-    margin-top: 50px;
-    margin-left: 400px;
-    margin-right: 400px;
-}
-
-.bouton-connexion {
-    text-align: center;
-    margin-top: 40px;
-}
-
-#connecte {
-    color : red;
-}
-
 /* Pour suite du panier */
 
 #titre1 {
@@ -256,10 +247,4 @@ a {
     border: 2px solid black;
     margin-top: 30px;
     margin-bottom: 30px;
-}
-
-/* Pour la pagination */
-
-#pagination {
-    color: blue;
 }
