--- a/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
@@ -21,9 +21,10 @@
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="{{ path('categorie') }}"><img class="img-fluid"
-                                src="{{ absolute_url('/assets/images/logo_village_green.png')}}" alt="logo"
-                                id="logo"></a>
+                        <a class="navbar-brand" href="{{ path('categorie') }}">
+                            <img class="img-responsive "
+                                src="{{ absolute_url('/assets/images/logo_village_green.png')}}" alt="logo" id="logo">
+                        </a>
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -49,15 +50,17 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <form class="d-flex">
+                            {# <form class="d-flex me-auto">
                                 <input class="form-control me-2" type="search" aria-label="Search">
                                 <button class="btn btn-outline-secondary" type="submit">Rechercher</button>
-                            </form>
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="icone">
+                            </form> #}
+                            <ul class="navbar-nav  mb-2 mb-lg-0" id="icone">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Espace client
+
+                                        <i class="fa-solid fa-user"></i>
+
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li>
@@ -72,8 +75,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="{{ path('panier') }}">
-                                        <img class="img-fluid" src="{{ absolute_url('/assets/images/panier.svg')}}"
-                                            alt="panier" id="panier">
+
+                                        <i class="fa-solid fa-cart-shopping"></i>
+
                                         {% if app.session.get('panier') %}
                                         {% set TotalPanier =0 %}
                                         {% for key,cpte in app.session.get('panier') %}
@@ -118,6 +122,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/7ad60320d2.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
