--- a/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
@@ -22,8 +22,8 @@
 
                     <div class="container-fluid">
                         <a class="navbar-brand" href="{{ path('categorie') }}">
-                            <img class="img-responsive "
-                                src="{{ absolute_url('/assets/images/logo_village_green.png')}}" alt="logo" id="logo">
+                            <img class="img-fluid" src="{{ absolute_url('/assets/images/logo_village_green.png')}}"
+                                alt="logo" id="logo">
                         </a>
 
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -54,13 +54,11 @@
                                 <input class="form-control me-2" type="search" aria-label="Search">
                                 <button class="btn btn-outline-secondary" type="submit">Rechercher</button>
                             </form> #}
-                            <ul class="navbar-nav  mb-2 mb-lg-0" id="icone">
+                            <ul class="navbar-nav mb-2 mb-lg-0" id="icone">
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown"
                                         role="button" data-bs-toggle="dropdown" aria-expanded="false">
-
                                         <i class="fa-solid fa-user"></i>
-
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li>
