--- a/FilRouge/SYMFONY/VillageGreen/templates/panier/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/panier/index.html.twig
@@ -30,8 +30,8 @@
             <tr>
                 <td>
                     <a href="{{ path('details', {id : ligne.produit.id}) }}">
-                        <img class="img-fluid" src="/assets/images/produits/{{ ligne.produit.photo }}"
-                            alt="{{ ligne.produit.nom }}" id="image-panier">
+                        <img class="img-fluid" width="150px" src="/assets/images/produits/{{ ligne.produit.photo }}"
+                            alt="{{ ligne.produit.nom }}">
                     </a>
                 </td>
                 <td>{{ ligne.produit.nom }}</td>
@@ -40,19 +40,13 @@
                 <td>{{ ligne.quantite * ligne.produit.prixachat }} &euro;</td>
                 <td>
                     <a href="{{ path('add', {id: ligne.produit.id}) }}" class="btn btn-success">
-                        <i>+1</i>
+                        <i class="fa-solid fa-magnifying-glass-plus"></i>
                     </a>
                     <a href="{{ path('remove', {id: ligne.produit.id}) }}" class="btn btn-primary">
-                        <i>-1</i>
+                        <i class="fa-solid fa-magnifying-glass-minus"></i>
                     </a>
                     <a href="{{ path('delete', {id: ligne.produit.id}) }}" class="btn btn-danger">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-trash" viewBox="0 0 16 16">
-                            <path
-                                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
-                            <path fill-rule="evenodd"
-                                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                        </svg>
+                        <i class="fa-solid fa-trash"></i>
                     </a>
                 </td>
             </tr>
@@ -60,17 +54,9 @@
             {% else %}
             <tr>
                 <td colspan="6" class="text-center" id="vide">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-emoji-frown-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm-2.715 5.933a.5.5 0 0 1-.183-.683A4.498 4.498 0 0 1 8 9.5a4.5 4.5 0 0 1 3.898 2.25.5.5 0 0 1-.866.5A3.498 3.498 0 0 0 8 10.5a3.498 3.498 0 0 0-3.032 1.75.5.5 0 0 1-.683.183zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z" />
-                    </svg>
+                    <i class="fa-regular fa-face-frown-open"></i>
                     Il n'y a rien là-dedans
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-emoji-frown-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm-2.715 5.933a.5.5 0 0 1-.183-.683A4.498 4.498 0 0 1 8 9.5a4.5 4.5 0 0 1 3.898 2.25.5.5 0 0 1-.866.5A3.498 3.498 0 0 0 8 10.5a3.498 3.498 0 0 0-3.032 1.75.5.5 0 0 1-.683.183zM10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8z" />
-                    </svg>
+                    <i class="fa-regular fa-face-frown-open"></i>
                 </td>
             </tr>
             {% endfor %}
