--- a/FilRouge/SYMFONY/VillageGreen/templates/profil/index.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/profil/index.html.twig
@@ -102,7 +102,7 @@
     #}
 
     <div class="row">
-        <div class="col-12 bouton-connexion">
+        <div class="col-12 pt-4 text-center">
             <button type="submit" class="btn btn-dark">
                 Valider mes informations
             </button>
