--- a/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
+++ b/FilRouge/SYMFONY/VillageGreen/templates/base.html.twig
@@ -62,11 +62,11 @@
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <li>
-                                            <a class="dropdown-item" href="{{ path('app_login') }}">Identifiez-vous</a>
+                                            <a class="dropdown-item" href="{{ path('app_login') }}">Se connecter</a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" href="{{ path('app_register') }}">
-                                                Créer un compte
+                                                S'inscrire
                                             </a>
                                         </li>
                                     </ul>
@@ -74,7 +74,7 @@
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page" href="{{ path('panier') }}">
 
-                                        <i class="fa-solid fa-cart-shopping"></i>
+                                        <i class="fa-solid fa-cart-shopping text-warning"></i>
 
                                         {% if app.session.get('panier') %}
                                         {% set TotalPanier =0 %}
